--- a/home.html
+++ b/home.html
@@ -13,8 +13,22 @@
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body class="main-bg-color">
-    <div id="app" class="text-color">
+    <ul class="navbar">
+        <li><img src="logo.jpg"></li>
+        <li>Showcase</li>
+        <li>Schedule</li>
+        <li>About</li>
+        <li id="search"><img src="search.png"></li>
+    </ul>
+    <!-- <div id="app" class="text-color">
         {{ message }}
+    </div> -->
+    <div class="winner">
+        <div id="box"></div>
+        <div class="text">
+            <h1>WINNER</h1>
+            <p>Project description....</p>
+        </div>
     </div>
     <div>
         <h1 class="text-color header-font">GameChangers and DreamHack</h1>
