--- a/home.html
+++ b/home.html
@@ -26,16 +26,16 @@
     <div class="winner">
         <div id="box"></div>
         <div class="text">
-            <h1>WINNER</h1>
-            <p>Project description....</p>
+            <h1 id="winner-title">{{message}}</h1 i>
+            <p id="winner-description">{{message}}</p>
         </div>
     </div>
     <div>
-        <h1 class="text-color header-font">GameChangers and DreamHack</h1>
+        <h1 class="text-black header-font">GameChangers and DreamHack</h1>
         <div class="spacing"></div>
-        <p class="text-color">Presenting a hackathon tool to create a community.</p>
+        <p class="text-black">Presenting a hackathon tool to create a community.</p>
         <div class="spacing-2"></div>
-        <p class="text-color">Coming soon...</p>
+        <p class="text-black">Coming soon...</p>
     </div>
     <script src="home.js"></script>
 </body>
